fix: mobile overflow-y

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,11 @@
 }
 
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
